k8s/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openmanage-production
  labels:
    app: openmanage-ai
    env: production
